# cubi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/: copilot-instructions.md
.github/workflows/: bench.yml  ci.yml  deny.yml  release.yml  swebench-score.yml
.marathon/: subagent-blocks.json
bench/: README.md
bench/tasks/py-bug-off-by-one/: task.toml  verify.sh
bench/tasks/py-bug-off-by-one/repo/: test_window.py  window.py
bench/tasks/py-import-fix/: task.toml
bench/tasks/py-import-fix/repo/: report.py  test_report.py
bench/tasks/py-leap-year/: task.toml
bench/tasks/py-leap-year/repo/: leap.py  test_leap.py
bench/tasks/rust-fizzbuzz/: task.toml  verify.sh
bench/tasks/rust-fizzbuzz/repo/: Cargo.toml
bench/tasks/rust-fizzbuzz/repo/src/: lib.rs
bench/tasks/rust-off-by-one/: task.toml
bench/tasks/rust-off-by-one/repo/: Cargo.toml
bench/tasks/rust-off-by-one/repo/src/: lib.rs
bench/tasks/rust-typo-fix/: task.toml
bench/tasks/rust-typo-fix/repo/: Cargo.toml
bench/tasks/rust-typo-fix/repo/src/: lib.rs
docs/: cubi.1  fara-eval.md  headless.md  plugins.md  sessions.md  swebench.md  troubleshooting.md
docs/mcp/: registry.json  registry.md
src/: agent_loop.rs  agents.rs  bench.rs  browser_tool.rs  builtin_tools.rs  cli.rs  commands.rs  compat.rs  completer.rs  completions.rs  consensus.rs  doctor.rs  event_sink.rs  executor.rs  exit_code.rs  file_mentions.rs  file_rollback.rs  git_cmds.rs  hooks.rs  json_events.rs  llm.rs  lsp_client.rs  main.rs  mcp_cli.rs  mcp_client.rs  mcp_config.rs  mcp_manager.rs  mcp_registry.rs  memdir.rs  migrations.rs  oauth.rs  ollama.rs  onboarding.rs  out.rs  output_styles.rs  permissions.rs  plugins.rs  policy.rs  pricing.rs  proc_subagent.rs  (+20 more)
src/cli/: agent.rs  edit_cmd.rs  mod.rs  multiline.rs  render.rs  repl.rs  spinner.rs  status.rs  ui_sink.rs
src/cli/tui/: ansi.rs  app.rs  capture.rs  diff.rs  event.rs  highlight.rs  markdown.rs  mod.rs  sink.rs  term.rs  theme.rs  widgets.rs
tests/: bench.rs  browser.rs  completions_snapshots.rs  headless.rs  mcp_registry.rs  receipts.rs  repomap.rs  swebench.rs
tests/snapshots/: completions_snapshots__bash_completion.snap  completions_snapshots__fish_completion.snap  completions_snapshots__zsh_completion.snap  mcp_registry__search_git_names.snap
