[package]
name = "cubi"
version = "0.3.0"
edition = "2024"
description = "Cubi — a pocket-sized AI for your shell with local model inference, native tool-calling, and MCP support"
license = "MIT"
repository = "https://github.com/peterchoi1014/cubi"
homepage = "https://github.com/peterchoi1014/cubi"
documentation = "https://github.com/peterchoi1014/cubi#readme"
readme = "README.md"
keywords = ["ai", "cli", "ollama", "llm", "mcp"]
categories = ["command-line-utilities"]
rust-version = "1.85"
exclude = [
    ".copilot/*",
    ".github/*",
    ".sessions/*",
    "docs/assets/*",
    "screenshots/*",
    "target/*",
    "tests/fixtures/*",
]

[[bin]]
name = "cubi"
path = "src/main.rs"

[dependencies]
# For async timeout
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "signal"] }

# HTTP client for Ollama API and MCP
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI interaction
colored = "2.1"
rustyline = "14.0"

# Error handling
anyhow = "1.0"

# For home directory resolution
dirs = "5.0"

# UUID for request IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Streaming responses from Ollama
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Markdown renderer for AI replies (non-streaming mode).
termimad = "0.30"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"
tempfile = "3.27.0"

