[package]
name = "cubi"
version = "0.3.0"
edition = "2024"
description = "Cubi — a pocket-sized AI for your shell with local model inference, native tool-calling, and MCP support"
license = "MIT"
repository = "https://github.com/peterchoi1014/cubi"
homepage = "https://github.com/peterchoi1014/cubi"
documentation = "https://github.com/peterchoi1014/cubi#readme"
readme = "README.md"
keywords = ["ai", "cli", "ollama", "llm", "mcp"]
categories = ["command-line-utilities"]
rust-version = "1.85"
exclude = [
    ".copilot/*",
    ".github/*",
    ".sessions/*",
    "docs/assets/*",
    "screenshots/*",
    "target/*",
    "tests/fixtures/*",
]

[[bin]]
name = "cubi"
path = "src/main.rs"

[dependencies]
# For async timeout
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "signal"] }

# HTTP client for Ollama API and MCP
reqwest = { version = "0.13", features = ["json", "stream"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI interaction
colored = "3"
rustyline = "14.0.0"

# Error handling
anyhow = "1.0"

# For home directory resolution
dirs = "6"

# UUID for request IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Streaming responses from Ollama
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Structured logging for internal diagnostics. Filter via the `CUBI_LOG`
# env var (e.g. `CUBI_LOG=cubi=debug`). User-facing output stays on
# `eprintln!`; tracing is reserved for breadcrumbs that maintainers
# enable when reproducing a bug.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.27.0"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"

# Tuned release profile. Defaults to `opt-level = 3` already, but
# enabling thin LTO + a single codegen unit lets the linker inline
# across crate boundaries (reqwest, tokio, hyper, serde) which is the
# biggest single binary-size and steady-state CPU win for a CLI like
# this. `strip = "symbols"` drops debug/symbol tables from the shipped
# binary — we still publish source-mapped debug builds via `cargo build`,
# and a panic backtrace will print symbolicated frames from the
# in-process debug info reqwest/tokio carry until link time.
#
# `panic = "abort"` is intentionally NOT set: the REPL and several
# tests rely on unwinding (e.g. `std::panic::catch_unwind` in the test
# harness, and clean cleanup of in-flight tokio tasks on a panic).
#
# Incremental compilation is left at its default (off for release)
# because LTO already invalidates it on every change.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Keep dev builds fast: no LTO, parallel codegen, debuginfo on.
# Stated explicitly so future profile changes don't accidentally
# slow down `cargo build` / `cargo test`.
[profile.dev]
opt-level = 0
debug = true
codegen-units = 256

