[package]
name = "cubi"
version = "0.6.0"
edition = "2024"
description = "Cubi — a pocket-sized AI for your shell with local model inference, native tool-calling, and MCP support"
license = "MIT"
repository = "https://github.com/peterchoi1014/cubi"
homepage = "https://github.com/peterchoi1014/cubi"
documentation = "https://github.com/peterchoi1014/cubi#readme"
readme = "README.md"
keywords = ["ai", "cli", "ollama", "llm", "mcp"]
categories = ["command-line-utilities"]
rust-version = "1.88"
exclude = [
    ".copilot/*",
    ".github/*",
    ".sessions/*",
    "docs/assets/*",
    "screenshots/*",
    "target/*",
    "tests/fixtures/*",
]

[[bin]]
name = "cubi"
path = "src/main.rs"

[dependencies]
# For async timeout
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "signal"] }

# HTTP client for Ollama API and MCP
reqwest = { version = "0.13", features = ["json", "stream"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI interaction
colored = "3"
rustyline = "14.0.0"

# Error handling
anyhow = "1.0"

# For home directory resolution
dirs = "6"

# UUID for request IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Streaming responses from Ollama
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Structured logging for internal diagnostics. Filter via the `CUBI_LOG`
# env var (e.g. `CUBI_LOG=cubi=debug`). User-facing output stays on
# `eprintln!`; tracing is reserved for breadcrumbs that maintainers
# enable when reproducing a bug.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.27.0"

# Walks the file tree honoring .gitignore / .ignore. Used by the
# repo-map feature to enumerate source files without re-implementing
# ignore semantics. Pulls globset which is already in the dep graph.
ignore = "0.4"

# Optional tree-sitter parsers — gated behind the `tree-sitter` feature
# (default on). When disabled the repo-map falls back to a regex-style
# scanner so the smallest possible binary still gets a working outline.
tree-sitter = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }

# Optional headless-browser driver. Pulled in only when the `browser`
# feature is enabled so the default binary stays lean — chromiumoxide
# pulls in CDP-generated code (~60K lines) and adds several MB to the
# release artifact. See `src/browser_tool.rs`.
chromiumoxide = { version = "0.9", optional = true, default-features = false }
futures = { version = "0.3", optional = true }

# No-echo terminal prompts for secret env vars (PATs, API keys) during
# `cubi mcp install`. Pure-Rust on Unix, winapi on Windows; ~200 LOC.
rpassword = "7"

# Tamper-evident receipts log: SHA-256 hash chain, optional Ed25519
# signing. Hand-rolled hex encoding keeps the dep surface minimal.
sha2 = "0.10"
ed25519-dalek = "2"
base64 = "0.22"
getrandom = "0.2"

# Parse `bench/tasks/<id>/task.toml` definitions for `cubi bench`.
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Opt-in full-screen terminal UI (Phase 2). `ratatui` owns layout/rendering;
# its default backend targets the `crossterm` 0.29.x line, so we pin
# `crossterm` to a matching `0.29` (deduped to a single version in the tree —
# see `cargo tree -i crossterm`) and enable `event-stream` so the future
# render task can consume input via an async `EventStream`. Using the latest
# stable ratatui (0.30.x) also keeps the dependency tree free of the
# unmaintained `paste` crate that older ratatui lines pulled in transitively.
# `unstable-rendered-line-info` enables `Paragraph::line_count`, used to clamp
# the transcript scroll offset to the wrapped content height (auto-follow).
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }

[features]
default = ["tree-sitter"]
tree-sitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
]
# Enables the `browser_open` / `browser_eval` / `browser_screenshot` /
# `browser_text` / `browser_close` built-in tools. Requires a Chromium
# or Chrome binary at runtime.
browser = ["dep:chromiumoxide", "dep:futures"]

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"

# Tuned release profile. Defaults to `opt-level = 3` already, but
# enabling thin LTO + a single codegen unit lets the linker inline
# across crate boundaries (reqwest, tokio, hyper, serde) which is the
# biggest single binary-size and steady-state CPU win for a CLI like
# this. `strip = "symbols"` drops debug/symbol tables from the shipped
# binary — we still publish source-mapped debug builds via `cargo build`,
# and a panic backtrace will print symbolicated frames from the
# in-process debug info reqwest/tokio carry until link time.
#
# `panic = "abort"` is intentionally NOT set: the REPL and several
# tests rely on unwinding (e.g. `std::panic::catch_unwind` in the test
# harness, and clean cleanup of in-flight tokio tasks on a panic).
#
# Incremental compilation is left at its default (off for release)
# because LTO already invalidates it on every change.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Keep dev builds fast: no LTO, parallel codegen, debuginfo on.
# Stated explicitly so future profile changes don't accidentally
# slow down `cargo build` / `cargo test`.
[profile.dev]
opt-level = 0
debug = true
codegen-units = 256


# The codebase predates clippy's `uninlined_format_args` lint being enabled by
# default (it became a default warning again on the 1.88 toolchain used by CI).
# The existing style uses `format!("{}", x)` throughout; allow it package-wide
# rather than churning ~480 call sites. Applies to all targets (bin + tests).
[lints.clippy]
uninlined_format_args = "allow"
